# learning_log

./: .gitignore  README.md  build.sh  hi.py  install.txt  pyproject.toml  requirements.txt  vercel.json
.platform/local/: project.yaml
accounts/: views.py
accounts/templates/registration/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
learning_logs/: apps.py  models.py  urls.py  views.py
learning_logs/migrations/: 0004_topic_public.py
learning_logs/templates/learning_logs/: base.html  delete_entry_confirm.html  delete_topic_confirm.html  edit_entry.html  entry.html  index.html  new_entry.html  new_topic.html  topic.html  topics.html
ll_project/: settings.py  urls.py  wsgi.py
