[project]
name = "ll_project"
version = "0.1.0"
description = "Learning Log deployed on Vercel"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",
    "django-bootstrap5>=23.3",
    "dj-database-url>=2.1.0",
    "psycopg2-binary>=2.9.9",
    "whitenoise>=6.6.0",
    "gunicorn>=21.2.0",
]