[project]
name = "learning-log"
version = "0.1.0"
description = "A Django web app to track learning topics and entries"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.11.1",
    "dj-database-url==3.1.2",
    "django==6.0.2",
    "django-bootstrap5==26.2",
    "django-allauth>=65.0.0",
    "gunicorn==25.1.0",
    "packaging==26.0",
    "psycopg2-binary==2.9.11",
    "sqlparse==0.5.5",
    "whitenoise==6.12.0",
    "requests>=2.32.5",
    "python-dotenv>=1.2.1",
    "pyjwt>=2.11.0",
]
